--- a/resources/templates/c/.vscode/tasks.json
+++ b/resources/templates/c/.vscode/tasks.json
@@ -7,7 +7,7 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "label": "build example"
+            "label": "build project"
         }
     ]
 }
