--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.1.0",
+	"version": "2.1.1",
 	"preview": true,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -28,7 +28,8 @@
 	},
 	"dependencies": {
 		"@vscode/debugadapter": "1.51.0",
-		"await-notify": "^1.0.1"
+		"await-notify": "^1.0.1",
+		"vscode-cpptools": "^6.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^18.11.11",
@@ -46,7 +47,7 @@
 		"onLanguage:asm",
 		"onDebug",
 		"onCommand:vs64.showWelcome",
-        "onCommand:vs64.createProjectAsm",
+		"onCommand:vs64.createProjectAsm",
 		"onCommand:vs64.createProjectC",
 		"onCommand:vs64.createProjectCpp",
 		"onCommand:vs64.buildProject",
@@ -67,43 +68,43 @@
 		"Formatters"
 	],
 	"contributes": {
-        "commands": [
-            {
-                "command": "vs64.showWelcome",
-                "title": "Getting Started",
-                "category": "VS64"
-            },
-            {
-                "command": "vs64.showSettings",
-                "title": "Open Settings",
-                "category": "VS64"
-            },
-            {
-                "command": "vs64.createProjectAsm",
-                "title": "Create ACME Assembler Project",
-                "category": "VS64"
-            },
-            {
-                "command": "vs64.createProjectC",
-                "title": "Create CC65 C Project",
-                "category": "VS64"
-            },
-            {
-                "command": "vs64.createProjectCpp",
-                "title": "Create LLVM-MOS C++ Project",
-                "category": "VS64"
-            },
-            {
-                "command": "vs64.buildProject",
-                "title": "Build project",
-                "category": "VS64"
-            },
-            {
-                "command": "vs64.cleanProject",
-                "title": "Clean project build",
-                "category": "VS64"
-            }
-        ],
+		"commands": [
+			{
+				"command": "vs64.showWelcome",
+				"title": "Getting Started",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.showSettings",
+				"title": "Open Settings",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.createProjectAsm",
+				"title": "Create ACME Assembler Project",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.createProjectC",
+				"title": "Create CC65 C Project",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.createProjectCpp",
+				"title": "Create LLVM-MOS C++ Project",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.buildProject",
+				"title": "Build project",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.cleanProject",
+				"title": "Clean project build",
+				"category": "VS64"
+			}
+		],
 		"walkthroughs": [
 			{
 				"id": "vs64",
@@ -183,7 +184,6 @@
 							"onLink:https://github.com/rolandshacks/vs64"
 						]
 					}
-
 				]
 			}
 		],
@@ -196,7 +196,7 @@
 					"${workspaceFolder}"
 				],
 				"pattern": {
-                    "regexp": "^(\\S*)\\(\\s*(\\d*)\\s*\\)\\s*:\\s*(\\w*).*:\\s*(.*)$",
+					"regexp": "^(\\S*)\\(\\s*(\\d*)\\s*\\)\\s*:\\s*(\\w*).*:\\s*(.*)$",
 					"severity": 3,
 					"file": 1,
 					"location": 2,
@@ -294,7 +294,6 @@
 						"default": "",
 						"description": "Path to custom ninja executable. Leave empty to use the ninja executable coming with the extension package."
 					}
-
 				}
 			},
 			{
