--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
 			"request": "launch",
 			//"runtimeExecutable": "${execPath}",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+                "--trace-deprecation",
+				"--extensionDevelopmentPath=${workspaceFolder}",
 			]
 		},
 		{
