--- a/examples/c/project-config.json
+++ b/examples/c/project-config.json
@@ -4,15 +4,10 @@
     "toolkit": "cc65",
     "sources": [
         "src/main.c",
-        "libc64/src/audio.c",
-        "libc64/src/auxiliary.c",
-        "libc64/src/system.c",
-        "libc64/src/video.c",
-        "libc64/src/sprite.c",
-        "resources/sprites.spm"
+        "src/data.raw"
     ],
     "build": "debug",
     "definitions": [],
-    "includes": ["libc64/include"],
+    "includes": [],
     "args": []
 }
