--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     },
     "terminal.integrated.shell.windows": "cmd.exe",
     "typescript.surveys.enabled": false,
-    "C_Cpp.codeAnalysis.clangTidy.path": "C:\\tools\\llvm-mos\\bin\\clang-tidy.exe",
+    "C_Cpp.codeAnalysis.clangTidy.path": "/home/roland/llvm-mos/bin/clang-tidy",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "ros.distro": "humble",
