--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.4.0",
+	"version": "2.4.1",
 	"preview": true,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -36,7 +36,7 @@
 		"@types/node": "^18.11.11",
 		"@types/vscode": "^1.73.0",
 		"eslint": "^8.29.0",
-		"jest": "^29.3.1",
+		"jest": "^29.5.0",
 		"typescript": "^3.6.2"
 	},
 	"galleryBanner": {
@@ -147,7 +147,7 @@
 						},
 						"completionEvents": [
 							"onSettingChanged:vs64.kickInstallDir",
-                            "onSettingChanged:vs64.javaExecutable"
+							"onSettingChanged:vs64.javaExecutable"
 						]
 					},
 					{
@@ -266,24 +266,26 @@
 		"languages": [
 			{
 				"id": "asm",
-				"aliases": [
-					"6502",
-					"asm"
-				],
-				"extensions": [
-					".asm",
-					".s"
-				],
+				"aliases": [ "6502 Assembler" ],
+				"extensions": [ ".asm", ".s" ],
 				"configuration": "./language/asm.language.json"
 			},
 			{
+				"id": "kick",
+				"aliases": [ "KickAssembler" ],
+				"extensions": [ ".kick" ],
+				"configuration": "./language/kick.language.json"
+			},
+			{
+				"id": "acme",
+				"aliases": [ "ACME" ],
+				"extensions": [ ".acme" ],
+				"configuration": "./language/acme.language.json"
+			},
+			{
 				"id": "res",
-				"aliases": [
-					"resource"
-				],
-				"extensions": [
-					".res"
-				]
+				"aliases": [ "resource"	],
+				"extensions": [ ".res" ]
 			}
 		],
 		"grammars": [
@@ -291,6 +293,16 @@
 				"language": "asm",
 				"scopeName": "source.asm",
 				"path": "./language/asm.grammar.json"
+			},
+			{
+				"language": "kick",
+				"scopeName": "source.kick",
+				"path": "./language/kick.grammar.json"
+			},
+			{
+				"language": "acme",
+				"scopeName": "source.acme",
+				"path": "./language/acme.grammar.json"
 			}
 		],
 		"snippets": [
