--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.4.0",
+	"version": "2.4.1",
 	"preview": true,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -36,7 +36,7 @@
 		"@types/node": "^18.11.11",
 		"@types/vscode": "^1.73.0",
 		"eslint": "^8.29.0",
-		"jest": "^29.3.1",
+		"jest": "^29.5.0",
 		"typescript": "^3.6.2"
 	},
 	"galleryBanner": {
@@ -45,15 +45,7 @@
 	},
 	"activationEvents": [
 		"onStartupFinished",
-		"onLanguage:asm",
 		"onDebug",
-		"onCommand:vs64.showWelcome",
-		"onCommand:vs64.createProjectAcme",
-		"onCommand:vs64.createProjectKick",
-		"onCommand:vs64.createProjectCc65",
-		"onCommand:vs64.createProjectLlvm",
-		"onCommand:vs64.buildProject",
-		"onCommand:vs64.cleanProject",
 		"onCommand:workbench.action.tasks.runTask"
 	],
 	"keywords": [
@@ -147,7 +139,7 @@
 						},
 						"completionEvents": [
 							"onSettingChanged:vs64.kickInstallDir",
-                            "onSettingChanged:vs64.javaExecutable"
+							"onSettingChanged:vs64.javaExecutable"
 						]
 					},
 					{
@@ -246,44 +238,19 @@
 					"column": 3,
 					"message": 5
 				}
-			},
-			{
-				"name": "kick_unused",
-				"owner": "vs64",
-				"fileLocation": [
-					"autoDetect",
-					"${workspaceFolder}"
-				],
-				"pattern": {
-					"regexp": "^\\s*\\(([^\\r\\n\\t\\f\\v\\) ]*)\\s*(\\d*):(\\d*)\\)\\s*(.*)$",
-					"file": 1,
-					"location": 2,
-					"column": 3,
-					"message": 4
-				}
 			}
 		],
 		"languages": [
 			{
 				"id": "asm",
-				"aliases": [
-					"6502",
-					"asm"
-				],
-				"extensions": [
-					".asm",
-					".s"
-				],
+				"aliases": [ "6502 Assembler" ],
+				"extensions": [ ".asm", ".s" ],
 				"configuration": "./language/asm.language.json"
 			},
 			{
 				"id": "res",
-				"aliases": [
-					"resource"
-				],
-				"extensions": [
-					".res"
-				]
+				"aliases": [ "resource"	],
+				"extensions": [ ".res" ]
 			}
 		],
 		"grammars": [
