--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "VS64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "2.4.1",
+	"version": "2.4.2",
 	"preview": true,
 	"publisher": "rosc",
 	"license": "SEE LICENSE IN LICENSE",
@@ -23,8 +23,8 @@
 	},
 	"scripts": {
 		"lint": "eslint .",
-		"pretest": "npm run lint",
-		"test": "cd test && jest --runInBand --config ./jest.config.js"
+		"test": "jest --runInBand --config ./test/jest.config.js",
+		"coverage": "jest --coverage --runInBand --config ./test/jest.config.js"
 	},
 	"dependencies": {
 		"@vscode/debugadapter": "1.51.0",
@@ -96,6 +96,11 @@
 			{
 				"command": "vs64.buildProject",
 				"title": "Build project",
+				"category": "VS64"
+			},
+			{
+				"command": "vs64.rebuildProject",
+				"title": "Re-build project",
 				"category": "VS64"
 			},
 			{
