--- a/resources/templates/kick/.vscode/launch.json
+++ b/resources/templates/kick/.vscode/launch.json
@@ -2,12 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "6502",
-            "request": "launch",
-            "name": "Launch 6502",
-            "preLaunchTask": "${defaultBuildTask}"
-        },
-        {
             "type": "vice",
             "request": "launch",
             "name": "Launch Vice",
@@ -17,6 +11,14 @@
             "type": "vice",
             "request": "attach",
             "name": "Attach Vice",
+            "hostname": "localhost",
+            "port": 6502,
+            "preLaunchTask": "${defaultBuildTask}"
+        },
+        {
+            "type": "6502",
+            "request": "launch",
+            "name": "Launch 6502",
             "preLaunchTask": "${defaultBuildTask}"
         }
     ]
